Fix overlap issue in navbar for narrow window view

--- a/src/files/website/css/main.css
+++ b/src/files/website/css/main.css
@@ -289,8 +289,9 @@ div[class^='col-'] {
 /* -- Navigation -- */
 
 .logo img {
-  padding: 8px;
-  height: 50px;
+  width: 140px;
+  margin-top: 12px;
+
 }
 
 .navbar {
@@ -339,7 +340,7 @@ div[class^='col-'] {
   cursor: pointer;
   display: inline-block;
   height: 100%;
-  padding: 20px 5px 0;
+  padding: 18px 5px 0;
 }
 
 #version ul {
@@ -634,7 +635,7 @@ div[class^='col-'] {
     color: #777;
     display: inline-block;
     max-width: 150px;
-    padding: 10px 12px;
+    padding-top: 10px;
   }
 
   #navDropdown>i {
@@ -648,10 +649,6 @@ div[class^='col-'] {
     display: none;
     list-style: none;
     text-align: right;
-  }
-
-  #navDropdown.show {
-    padding: 10px 12px;
   }
 
   #navDropdown.show #menu {
